backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/Hyrto_ServiceLog__c.object-meta.xml
<CustomObject>
 <label>Hyrto Service Log</label>
 <pluralLabel>Hyrto Service Logs</pluralLabel>
 <nameField>
  <label>Name</label>
  <type>Text</type>
 </nameField>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>