backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/Asset__c.field-meta.xml
<CustomField>
 <fullName>Asset__c</fullName><label>Asset</label><type>Lookup</type>
 <referenceTo>Asset</referenceTo>
 <relationshipLabel>Service Logs</relationshipLabel>
 <relationshipName>Hyrto_ServiceLogs</relationshipName>
</CustomField>