backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/Booking__c.field-meta.xml
<CustomField>
 <fullName>Booking__c</fullName><label>Booking</label><type>Lookup</type>
 <referenceTo>Hyrto_Booking__c</referenceTo>
 <relationshipLabel>Service Logs</relationshipLabel>
 <relationshipName>ServiceLogs</relationshipName>
</CustomField>