backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/Cost__c.field-meta.xml
<CustomField>
 <fullName>Cost__c</fullName><label>Cost</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>