backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/Notes__c.field-meta.xml
<CustomField>
 <fullName>Notes__c</fullName><label>Notes</label><type>TextArea</type>
</CustomField>