backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/PerformedBy__c.field-meta.xml
<CustomField>
 <fullName>PerformedBy__c</fullName><label>Performed By</label><type>Text</type><length>100</length>
</CustomField>