backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
 <fullName>ServiceDate__c</fullName><label>Service Date</label><type>DateTime</type>
</CustomField>