backend/hyrto-schema/force-app/main/default/objects/Hyrto_ServiceLog__c/fields/ServiceType__c.field-meta.xml
<CustomField>
 <fullName>ServiceType__c</fullName><label>Service Type</label><type>Text</type><length>100</length>
</CustomField>